[tool.poetry]
name = "youthon"
version = "0.4.3"
description = "A lightweight YouTube data scraper."
authors = ["anekobtw"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/anekobtw/youthon"

[tool.poetry.dependencies]
python = ">=3.9"
beautifulsoup4 = "4.12.3"
requests = "^2.32.5"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
